--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,4 @@ python:
 # command to install dependencies
 install:
 # command to run tests
-script:
-  - make test
-  - coverage run --source=mancala mancala/test_util.py test
+script: make test
